data/derived/sp14/progs/unify/prog3660.ml.out
Characters 124-137:
  if prod > 10 then (prod mod 10)::((prod / 10))
                                   ^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
